# image-fetcher

./: .dockerignore  Dockerfile  README.md  fetcher.py  iiif.py  pyproject.toml  requirements.test.txt  requirements.txt  setup.cfg  setup.py
src/: fetcher.py
tests/: conftest.py  test_create_stomp_connection.py  test_fetch_iiif_from_repo_uri.py  test_iiif.py  test_listeners.py  test_send_uris.py  test_stomp_consumer.py
